refactor: index.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-planet",
-  "homepage": "http://JayDeeJS.github.io/JayDeeJS.github.io",
+  "homepage": "http://JayDeeJS.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
